--- a/index.html
+++ b/index.html
@@ -1657,7 +1657,8 @@ viacero zemetrasení, ktoré spôsobili viac ako 1001 úmrtí. (Viac
 informácií mi tabuľka neposkytla.)</p>
 </div>
 <div class="cell markdown" id="iidLUEfx7NZz">
-<p><strong>Záver</strong> Závislosť úmrtnosti od magnitúdy nezáleží až
+<p><strong>Záver</strong></p>
+  <p>Závislosť úmrtnosti od magnitúdy nezáleží až
 tak od veľkosti magnitúdy ako skôr od lokality daného epicentra. Po
 analýze múžem tvrdiť, že zemetrasenia s epicentrami mimo pevniny
 neprispievajú až tak k úmrtnosti zapríčinenou zemetrasením bez ohľadu na
