--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>About Me</h2>
             <p>This is a brief introduction about myself, my background, and what motivates me.</p>
             <figure>
-                <img src="https://source.unsplash.com/random/800x600?person" alt="About Me" />
+                <img src="https://github.com/tady88/Page/raw/main/profile_picture.jpeg" alt="Profile Picture" />
                 <figcaption>An inspirational image related to personal growth</figcaption>
             </figure>
         </section>
@@ -41,7 +41,7 @@
             <h2>Education</h2>
             <p>Detailing my educational background, including degrees, certifications, and any special achievements.</p>
             <figure>
-                <img src="https://source.unsplash.com/random/800x600?books" alt="Education" />
+                <img src="https://github.com/tady88/Page/raw/main/matfyz.jpeg" alt="Near FMFI" />
                 <figcaption>An image that represents education and learning</figcaption>
             </figure>
         </section>
@@ -49,14 +49,14 @@
             <h2>Hobbies</h2>
             <p>Sharing some of my interests and activities outside of professional life.</p>
             <figure>
-                <img src="https://source.unsplash.com/random/800x600?hobby" alt="Hobbies" />
+                <img src="https://github.com/tady88/Page/raw/main/geocaching_stiavnica.jpeg" alt="Geocaching" />
                 <figcaption>An image reflecting personal hobbies or interests</figcaption>
             </figure>
         </section>
     </div>
 </main>
 <footer class="container">
-    <small>Privacy Policy • Terms of Use</small>
+    <small>Tadeáš Kaminský &middot; 2024</small>
 </footer>
 </body>
 </html>
