--- a/dataviz.html
+++ b/dataviz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    <link rel="icon" type="image/png" href="/icon.png">
     <title>Earthquakes</title>
     <style>
         body {
@@ -56,6 +57,7 @@
         <li><a href="/index.html" class="button">My Portfolio</a></li>
     </ul>
     <ul>
+        <li><a href="/hobbies.html" class="button">Hobbies</a></li>
         <li><a href="/my-projects.html" class="button">My Projects</a></li>
         <li><a href="/contacts.html" class="button">Contacts</a></li>
     </ul>
