--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="/index.html" class="button">My Portfolio</a></li>
     </ul>
     <ul>
+        <li><a href="/hobbies.html" class="button">Hobbies</a></li>
         <li><a href="/my-projects.html" class="button">My Projects</a></li>
         <li><a href="/contacts.html" class="button">Contacts</a></li>
     </ul>
