--- a/my-projects.html
+++ b/my-projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="icon" type="image/png" href="/icon.png">
-    <title>My projects</title>
+    <title>Personal Page</title>
     <style>
         body {
             --primary: #ff5722; /* Orange shade */
@@ -34,6 +34,7 @@
         <li><a href="/index.html" class="button">My Portfolio</a></li>
     </ul>
     <ul>
+        <li><a href="/hobbies.html" class="button">Hobbies</a></li>
         <li><a href="/my-projects.html" class="button">My Projects</a></li>
         <li><a href="/contacts.html" class="button">Contacts</a></li>
     </ul>
@@ -41,16 +42,13 @@
 <main class="container">
     <div style="text-align: center;">
         <h2>My Projects</h2>
-        <p>I worked on some projects which are listed below.</p>
+        <p>Here I will type some things</p>
         <img src="https://github.com/tady88/Page/raw/main/data_science_ai.png" alt="AI Data Science" style="height: 600px;">
         <figcaption>This is created by AI, but I can create some plots</figcaption>
     </div>
     <p></p>
     <div style="text-align: center;">
         <a href="/dataviz.html" class="button">Earthquakes</a>
-    </div>
-    <div style="text-align: center;">
-        <a href="/geocaching.html" class="button">Geocaching (to do)</a>
     </div>
 </main>
 <footer class="container" style="text-align: center;">
