--- a/dataviz.html
+++ b/dataviz.html
@@ -1409,7 +1409,7 @@ viacero zemetrasení, ktoré spôsobili viac ako 1001 úmrtí. (Viac
 informácií mi tabuľka neposkytla.)</p>
 </div>
 <div class="cell markdown" id="iidLUEfx7NZz">
-<p><strong>Záver</strong></p>
+<h2><strong>Záver</strong></h2>
   <p>Závislosť úmrtnosti od magnitúdy nezáleží až
 tak od veľkosti magnitúdy ako skôr od lokality daného epicentra. Po
 analýze múžem tvrdiť, že zemetrasenia s epicentrami mimo pevniny
