--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="icon" type="image/png" href="/icon.png">
-    <title>Contacts</title>
+    <title>Hobbies</title>
     <style>
         body {
             --primary: #ff5722; /* Orange shade */
@@ -48,7 +48,7 @@
 <main class="container" style="text-align: center;">
     <div class="grid">
         <section>
-            <p>Will be added soon. :)</p>
+            <p>Will be added soon as well. :)</p>
         </section>
     </div>
 </main>
