--- a/my-projects.html
+++ b/my-projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="icon" type="image/png" href="/icon.png">
-    <title>Personal Page</title>
+    <title>My projects</title>
     <style>
         body {
             --primary: #ff5722; /* Orange shade */
@@ -42,13 +42,16 @@
 <main class="container">
     <div style="text-align: center;">
         <h2>My Projects</h2>
-        <p>Here I will type some things</p>
+        <p>Results of my work so far</p>
         <img src="https://github.com/tady88/Page/raw/main/data_science_ai.png" alt="AI Data Science" style="height: 600px;">
         <figcaption>This is created by AI, but I can create some plots</figcaption>
     </div>
     <p></p>
     <div style="text-align: center;">
         <a href="/dataviz.html" class="button">Earthquakes</a>
+    </div>
+    <div style="text-align: center;">
+        <a href="" class="button">Geocaching - tsk88</a>
     </div>
 </main>
 <footer class="container" style="text-align: center;">
